--- a/Python Oops/Python Oops.ipynb
+++ b/Python Oops/Python Oops.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -178,15 +178,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number is divisible by 2\n",
-      "The number is divisible by 3\n"
+      "The number 15 is not divisible by 2\n",
+      "The number 15 is divisible by 3\n"
      ]
     }
    ],
@@ -195,35 +195,35 @@
     "    def __init__(self, num):\n",
     "        self.num = num\n",
     "\n",
-    "    def divmod(self):\n",
+    "    def divmod2(self):\n",
     "        if self.num%2==0:\n",
-    "            print(\"The number is divisible by 2\")\n",
+    "            print(f\"The number {self.num} is divisible by 2\")\n",
     "        else:\n",
-    "            print(\"The number is not divisible by 2\")\n",
+    "            print(f\"The number {self.num} is not divisible by 2\")\n",
     "\n",
     "    def divmod3(self):\n",
     "        if self.num%3==0:\n",
-    "            print(\"The number is divisible by 3\")\n",
+    "            print(f\"The number {self.num} is divisible by 3\")\n",
     "        else:\n",
-    "            print(\"The number is not divisible by 3\")\n",
+    "            print(f\"The number {self.num} is not divisible by 3\")\n",
     "            \n",
-    "divisible1 = divisible(18)\n",
-    "divisible1.divmod()\n",
+    "divisible1 = divisible(15)\n",
+    "divisible1.divmod2()\n",
     "divisible1.divmod3()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hello, Bhavan'"
+       "'Hello, Sathya'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
     "    def say(self):\n",
     "        return f\"Hello, {self.name}\"\n",
     "\n",
-    "greeting = greet(\"Bhavan\")\n",
+    "greeting = greet(\"Sathya\")\n",
     "greeting.say()"
    ]
   },
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -339,10 +339,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Addition: 12.0\n",
-      "Subtraction: 8.0\n",
-      "Multiplication: 20.0\n",
-      "Division: 5.0\n"
+      "Addition: 7.0\n",
+      "Subtraction: 7.0\n",
+      "Multiplication: 0.0\n",
+      "Division: Cannot divide by zero\n"
      ]
     }
    ],
@@ -362,10 +362,11 @@
     "        return self.x * self.y\n",
     "\n",
     "    def divide(self):\n",
-    "        if self.y != 0:\n",
+    "        try:\n",
     "            return self.x / self.y\n",
-    "        else:\n",
+    "        except ZeroDivisionError:\n",
     "            return \"Cannot divide by zero\"\n",
+    "        \n",
     "\n",
     "# Creating an object (instance) of the Calculator class\n",
     "x = float(input(\"Enter the first number: \"))\n",
@@ -403,7 +404,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sathya\n"
+     ]
+    }
+   ],
+   "source": [
+    "class person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        \n",
+    "person1 = person(\"Sathya\", 25)\n",
+    "print(person1.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
