--- a/Python Oops/Python Oops.ipynb
+++ b/Python Oops/Python Oops.ipynb
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
      "output_type": "stream",
      "text": [
       "Welcome to ws \n",
-      "Welcome to ws1\n"
+      "Welcome to ws1 Python\n"
      ]
     }
    ],
@@ -960,17 +960,17 @@
     "        print(\"Welcome to ws \")\n",
     "\n",
     "class ws1(ws):\n",
-    "    def displayinfo(self):\n",
+    "    def displayinfo(self, name):\n",
     "        super().displayinfo()\n",
-    "        print(\"Welcome to ws1\")\n",
+    "        print(\"Welcome to ws1\", name)\n",
     "\n",
     "obj=ws1()\n",
-    "obj.displayinfo()"
+    "obj.displayinfo(\"Python\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
     "plane = Airplane()\n",
     "\n",
     "make_it_fly(bird)   \n",
-    "make_it_fly(plane)  \n"
+    "make_it_fly(plane)  "
    ]
   },
   {
