--- a/Python Basics/2.Python_K_I_V_O.ipynb
+++ b/Python Basics/2.Python_K_I_V_O.ipynb
@@ -2162,7 +2162,10 @@
     "\n",
     "check whether two values are identical. Python has 2 identity operators as well:\n",
     "- is\n",
-    "- is not"
+    "- is not\n",
+    "\n",
+    "Note :-\n",
+    "- -5 to 256 numbers has a same id and small character has same id"
    ]
   },
   {
