--- a/Python Basics/4.Conditional_Statements.ipynb
+++ b/Python Basics/4.Conditional_Statements.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "c7337c57",
    "metadata": {},
    "outputs": [
@@ -33,23 +33,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n",
-      "x is greater than 5\n"
+      "4 is not greater than 5\n"
      ]
     }
    ],
    "source": [
-    "x = 10\n",
+    "x = int(input(\"Enter a number: \"))\n",
     "if x > 5:\n",
-    "    x+=1\n",
-    "    print(x)\n",
-    "    print(\"x is greater than 5\")\n",
+    "    print(f\"{x} is greater than 5\")\n",
+    "else:\n",
+    "    print(f\"{x} is not greater than 5\")\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "0390d5b5",
    "metadata": {},
    "outputs": [
@@ -57,24 +57,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n",
-      "x is not greater than 5\n"
+      "12\n",
+      "x is Not Less than 5\n"
      ]
     }
    ],
    "source": [
     "x = 10\n",
     "if x < 5:\n",
-    "    print(\"x is greater than 5\")\n",
+    "    print(\"x is Less Than 5\")\n",
     "else:\n",
     "    x+=1\n",
+    "    x = x+1\n",
     "    print(x)\n",
-    "    print(\"x is not greater than 5\")"
+    "    print(\"x is Not Less than 5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "facff153",
    "metadata": {},
    "outputs": [
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "8819a980",
    "metadata": {},
    "outputs": [
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "dabcb82b",
    "metadata": {},
    "outputs": [
@@ -126,13 +127,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
    "source": [
     "a = [1,2,3,4,5,6]\n",
-    "if type(a) == list:\n",
+    "if type(a) == tuple:\n",
     "    print(\"True\")\n",
     "else:\n",
     "    print(\"False\")"
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "41be216d",
    "metadata": {},
    "outputs": [
@@ -191,7 +192,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
+   "id": "25015de4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "its divisible by 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input('enter a numer: '))\n",
+    "if (x % 5 ==0):\n",
+    "    print('its divisible by 5')\n",
+    "else:\n",
+    "    print('its not divisible by 5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "dd2c444c",
    "metadata": {},
    "outputs": [
@@ -199,7 +222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not Divisible by 3\n"
+      "Divisible by 3\n"
      ]
     }
    ],
@@ -209,6 +232,99 @@
     "    print(\"Divisible by 3\")\n",
     "else:\n",
     "    print(\"Not Divisible by 3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "fc6c7d63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"Kayak\"\n",
+    "s = s.lower()\n",
+    "\n",
+    "if s == s[::-1]:\n",
+    "    print(\"Palindrome\")\n",
+    "else:\n",
+    "    print(\"Not Palindrome\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "bb0b9efd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = ['p','y','t','h','o','n']\n",
+    "# Output : \"python\" \n",
+    "string = ''.join(list)\n",
+    "print(string)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "46f2a35e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anagram\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'Listen'.lower()\n",
+    "b = 'Silent'.lower()\n",
+    "if sorted(a) == sorted(b):\n",
+    "    print(\"Anagram\")\n",
+    "else:\n",
+    "    print(\"Not Anagram\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "de44ffdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anagram\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'List  en'.lower()\n",
+    "b = 'Sile nt'.lower()\n",
+    "a = a.replace(\" \", \"\").lower()\n",
+    "b = b.replace(\" \", \"\").lower()\n",
+    "if sorted(a) == sorted(b):\n",
+    "    print(\"Anagram\")\n",
+    "else:\n",
+    "    print(\"Not Anagram\")"
    ]
   },
   {
@@ -268,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "48002bbb",
    "metadata": {},
    "outputs": [
@@ -276,7 +392,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024 is a leap year.\n"
+      "2028 is a leap year.\n"
      ]
     }
    ],
@@ -310,7 +426,7 @@
     "if a % 3 == 0 and a % 5 == 0:\n",
     "    print(a, ' is divisible by both 3 and 5')\n",
     "else:\n",
-    "    print(a, ' is not divisible by 3 itself, hence I won\\'t check if it is divisible by 5')\n",
+    "    print(a, ' is not divisible by 3 or 5 or both')\n",
     "\n",
     "print('We understood if-else')"
    ]
@@ -333,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "id": "f52c3cf4",
    "metadata": {},
    "outputs": [
@@ -341,7 +457,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23 is not divisible by both 3 and 5\n"
+      "15 is divisible by both 3 and 5\n"
      ]
     }
    ],
@@ -361,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "id": "b0334aa1",
    "metadata": {},
    "outputs": [
@@ -386,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "id": "a8606e24",
    "metadata": {},
    "outputs": [
@@ -406,30 +522,6 @@
     "    print(\"dont ask\")\n",
     "else:\n",
     "    print(\"i am outside\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "54c2291d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x is equal to 5\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 5\n",
-    "if x > 5:\n",
-    "    print(\"x is greater than 5\")\n",
-    "elif x < 5:\n",
-    "    print(\"x is less than 5\")\n",
-    "else:\n",
-    "    print(\"x is equal to 5\")"
    ]
   },
   {
@@ -459,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "ade21839",
    "metadata": {},
    "outputs": [
@@ -467,9 +559,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "70 65 85 90\n",
-      "310 / 400\n",
-      "77.5 %\n",
+      "75 85 65 70\n",
+      "295 / 400\n",
+      "73.75 %\n",
       "A\n"
      ]
     }
@@ -524,7 +616,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
+   "id": "6ccad7fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = int(input('enter a number'))\n",
+    "if t % 3 ==0 and t % 5 ==0:\n",
+    "    print('divisible by 3 & 5') \n",
+    "elif t % 5 ==0:\n",
+    "    print('divisible by 5')\n",
+    "else:\n",
+    "    print('not divisible by 3 & 5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "dcd23095",
    "metadata": {},
    "outputs": [
@@ -532,7 +640,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "not divisible by 3 & 5\n"
+      "divisible by 5\n"
      ]
     }
    ],
@@ -551,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "75396646",
    "metadata": {},
    "outputs": [
@@ -559,12 +667,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x is less than or equal to 5\n"
+      "x is Greater Than 5 and equal to 10\n"
      ]
     }
    ],
    "source": [
-    "x = 4\n",
+    "x = 10\n",
     "if x > 5:\n",
     "    if x == 10:\n",
     "        print(\"x is Greater Than 5 and equal to 10\")\n",
@@ -576,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "id": "11893c60",
    "metadata": {},
    "outputs": [
@@ -584,7 +692,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 is zero\n"
+      "-12 is -ve even number\n"
      ]
     }
    ],
@@ -596,7 +704,7 @@
     "        print(x,\"is +ve even number\")\n",
     "    else:\n",
     "        print(x,\"is +ve odd number\")\n",
-    "elif x<0:\n",
+    "elif x < 0:\n",
     "    if x%2==0:\n",
     "        print(x,\"is -ve even number\")\n",
     "    else:\n",
@@ -607,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "id": "06c6e281",
    "metadata": {},
    "outputs": [
@@ -615,7 +723,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Isosceles triangle\n"
+      "Equilateral triangle\n"
      ]
     }
    ],
@@ -637,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +757,7 @@
       "2. Subtract\n",
       "3. Multiply\n",
       "4. Divide\n",
-      "Result: 0.25\n"
+      "Result: 2.0\n"
      ]
     }
    ],
@@ -719,7 +827,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "af314117",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if a % 2 == 0:\n",
+    "    f\"{a} is Even\"\n",
+    "else:\n",
+    "    f\"{a} is Odd\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "ef5a076b",
    "metadata": {},
    "outputs": [
@@ -727,7 +848,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13 is Odd\n"
+      "10 is Even\n"
      ]
     }
    ],
@@ -798,6 +919,52 @@
     "string = input(\"Enter a string: \")\n",
     "Palindrome = \"string is a palindrome\" if string == string[::-1] else \"string is not a palindrome\"\n",
     "print(Palindrome)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ae0fb122",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anagram\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'Listen'.lower()\n",
+    "b = 'Silent'.lower()\n",
+    "\n",
+    "if sorted(a) == sorted(b): # sorted(a) == sorted(b)\n",
+    "    print(\"Anagram\")\n",
+    "else:\n",
+    "    print(\"Not A anagram\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "c5324128",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Anagram'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = \"Anagram\" if sorted(a) == sorted(b) else \"Not Anagram\"\n",
+    "c"
    ]
   },
   {
@@ -910,6 +1077,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "ac3e5cc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10, 20 is present in the list\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [10,12,14,16,18,20]\n",
+    "\n",
+    "match x:\n",
+    "    case _ if 10 in x and 20 in x:\n",
+    "        print(\"10, 20 is present in the list\")\n",
+    "    case _ if 20 in x:\n",
+    "        print(\"20 is present in the list\")\n",
+    "    case _:\n",
+    "        print(\"Number not found\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "482c9a39",
    "metadata": {},
@@ -939,7 +1132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
