--- a/Python Basics/3.Data Type and Stucture.ipynb
+++ b/Python Basics/3.Data Type and Stucture.ipynb
@@ -3426,7 +3426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -3477,35 +3477,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3, 4, 5}\n"
+      "{1, 2, 3, 4, 5, 6}\n"
      ]
     }
    ],
    "source": [
     "# tuple to Set (and Vice Versa):\n",
     "# From tuple to Set:\n",
-    "my_list = (1, 2, 2, 3, 4, 4, 5)\n",
+    "my_list = (1, 2, 2, 6, 3, 4, 4, 5)\n",
     "my_set = set(my_list)\n",
     "print(my_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'apple': 5, 'banana': 2, 'orange': 3}\n"
+      "{'apple': 1, 'banana': 2, 'orange': 3}\n"
      ]
     },
     {
@@ -3514,14 +3514,14 @@
        "dict_keys(['apple', 'banana', 'orange'])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Tuple to Dictionary:\n",
-    "my_tuple = ((\"apple\", 5), (\"banana\", 2), (\"orange\", 3))\n",
+    "my_tuple = ((\"apple\",1), (\"banana\", 2), (\"orange\", 3))\n",
     "my_dict = dict(my_tuple)\n",
     "print(my_dict)\n",
     "my_dict.keys()"
