--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "3b186dd2",
    "metadata": {},
    "outputs": [
@@ -54,22 +54,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
       "1\n",
       "2\n",
       "3\n",
-      "4\n"
+      "4\n",
+      "5\n"
      ]
     }
    ],
    "source": [
-    "for i in range(5):\n",
+    "for i in range(1, 5+1):\n",
     "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "007df63b",
    "metadata": {},
    "outputs": [
@@ -90,29 +90,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "055efbd9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[3, 4, 5]"
+       "[0, 1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "args = [3, 6]\n",
+    "args = [0, 6]\n",
     "list(range(*args))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "021aecea",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "ce0b7451",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "49981669",
    "metadata": {},
    "outputs": [
@@ -208,29 +208,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8 x 1 = 8\n",
-      "8 x 2 = 16\n",
-      "8 x 3 = 24\n",
-      "8 x 4 = 32\n",
-      "8 x 5 = 40\n",
-      "8 x 6 = 48\n",
-      "8 x 7 = 56\n",
-      "8 x 8 = 64\n",
-      "8 x 9 = 72\n",
-      "8 x 10 = 80\n"
+      "12 x 1 = 12\n",
+      "12 x 2 = 24\n",
+      "12 x 3 = 36\n",
+      "12 x 4 = 48\n",
+      "12 x 5 = 60\n",
+      "12 x 6 = 72\n",
+      "12 x 7 = 84\n",
+      "12 x 8 = 96\n",
+      "12 x 9 = 108\n",
+      "12 x 10 = 120\n",
+      "12 x 11 = 132\n",
+      "12 x 12 = 144\n",
+      "12 x 13 = 156\n",
+      "12 x 14 = 168\n",
+      "12 x 15 = 180\n",
+      "12 x 16 = 192\n",
+      "12 x 17 = 204\n",
+      "12 x 18 = 216\n",
+      "12 x 19 = 228\n",
+      "12 x 20 = 240\n"
      ]
     }
    ],
    "source": [
     "#creating a table\n",
     "a = int(input(\"Number: \"))\n",
-    "for i in range(1,11):\n",
+    "for i in range(1,21):\n",
     "    print(a,'x',i,'=',a*i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "e0351ad9",
    "metadata": {},
    "outputs": [
@@ -238,16 +248,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
-      "20\n",
-      "30\n",
-      "40\n",
-      "50\n",
+      "12\n",
+      "24\n",
+      "36\n",
+      "48\n",
       "60\n",
-      "70\n",
-      "80\n",
-      "90\n",
-      "100\n"
+      "72\n",
+      "84\n",
+      "96\n",
+      "108\n",
+      "120\n"
      ]
     }
    ],
@@ -260,7 +270,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
+   "id": "72de379b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 "
+     ]
+    }
+   ],
+   "source": [
+    "for i in   range(1,11):\n",
+    "    print(i,end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "a8d710e4",
    "metadata": {},
    "outputs": [
@@ -283,43 +312,40 @@
    ],
    "source": [
     "for x in range(1, 11):\n",
-    "    print(repr(x).rjust(2), repr(x*x).rjust(3), end=' ')\n",
-    "    # Note use of 'end' on previous line\n",
-    "    print(repr(x*x*x).rjust(4))"
+    "    print(repr(x).rjust(2), repr(x*x).rjust(3), repr(x*x*x).rjust(4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "12ba05bc",
+   "execution_count": 33,
+   "id": "99f50ef6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'Jupiter': 'J',\n",
-       " 'Mars': 'M',\n",
-       " 'Mercury': 'M',\n",
-       " 'Neptune': 'N',\n",
-       " 'Saturn': 'S',\n",
-       " 'Uranus': 'U',\n",
-       " 'Venus': 'V'}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mercury M\n",
+      "Venus   V\n",
+      "Earth   E\n",
+      "Mars    M\n",
+      "Jupiter J\n",
+      "Saturn  S\n",
+      "Uranus  U\n",
+      "Neptune N\n"
+     ]
     }
    ],
    "source": [
     "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune']\n",
-    "planet_to_initial = {planet: planet[0] for planet in sorted(planets) if planet != 'Earth'}\n",
-    "planet_to_initial"
+    "\n",
+    "for planet in planets:\n",
+    "    print(planet.ljust(7), planet[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "6a5348a6",
    "metadata": {},
    "outputs": [
@@ -327,24 +353,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Mercury begins with \"M\"\n",
-      "   Venus begins with \"V\"\n",
-      "    Mars begins with \"M\"\n",
+      "   Earth begins with \" \"\n",
       " Jupiter begins with \"J\"\n",
+      "    Mars begins with \"M\"\n",
+      " Mercury begins with \"M\"\n",
+      " Neptune begins with \"N\"\n",
       "  Saturn begins with \"S\"\n",
       "  Uranus begins with \"U\"\n",
-      " Neptune begins with \"N\"\n"
+      "   Venus begins with \"V\"\n"
      ]
     }
    ],
    "source": [
-    "for planet, initial in planet_to_initial.items():\n",
+    "planet_to_initial ={'Earth': ' ',\n",
+    " 'Jupiter': 'J',\n",
+    " 'Mars': 'M',\n",
+    " 'Mercury': 'M',\n",
+    " 'Neptune': 'N',\n",
+    " 'Saturn': 'S',\n",
+    " 'Uranus': 'U',\n",
+    " 'Venus': 'V'}\n",
+    "\n",
+    "for (planet, initial) in planet_to_initial.items():\n",
     "    print(\"{} begins with \\\"{}\\\"\".format(planet.rjust(8), initial))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "1387d149",
    "metadata": {},
    "outputs": [
@@ -367,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "id": "cda8c06f",
    "metadata": {},
    "outputs": [
@@ -375,7 +411,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a': '1', 'b': '2', 'c': '3', 'd': '4', 'e': '5'}\n"
+      "{'a': '1', 'b2': 'c', '3': 'd', '4': 'e', '5': 'f'}\n"
      ]
     }
    ],
@@ -390,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "id": "515a2abf",
    "metadata": {},
    "outputs": [
@@ -398,17 +434,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1 1 2 3 5 8 13 21 34 "
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]\n"
      ]
     }
    ],
    "source": [
     "#fibnoci sriese\n",
-    "a, b = 0, 1\n",
-    "\n",
+    "a = [0 , 1]\n",
+    "#a, b = 0, 1\n",
     "for _ in range(10):\n",
-    "    print(a, end=' ')\n",
-    "    a, b = b, a + b"
+    "    #print(a, end=' ')\n",
+    "    #a, b = b, a + b\n",
+    "    a.append(a[-1] + a[-2])\n",
+    "    \n",
+    "print(a)"
    ]
   },
   {
@@ -1662,6 +1701,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "20308a0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Earth': ' ',\n",
+       " 'Jupiter': 'J',\n",
+       " 'Mars': 'M',\n",
+       " 'Mercury': 'M',\n",
+       " 'Neptune': 'N',\n",
+       " 'Saturn': 'S',\n",
+       " 'Uranus': 'U',\n",
+       " 'Venus': 'V'}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune']\n",
+    "planet_to_initial = {planet: planet[0] if planet != 'Earth' else \" \" for planet in sorted(planets)}\n",
+    "planet_to_initial"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "cad54a87",
    "metadata": {},
@@ -1771,7 +1840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
