--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "67ba71f0",
    "metadata": {},
    "outputs": [
@@ -622,10 +622,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sum of the first 4 natural numbers is: 1\n",
-      "The sum of the first 4 natural numbers is: 3\n",
-      "The sum of the first 4 natural numbers is: 6\n",
-      "The sum of the first 4 natural numbers is: 10\n"
+      "The sum of the first 5 natural numbers is: 1\n",
+      "The sum of the first 5 natural numbers is: 3\n",
+      "The sum of the first 5 natural numbers is: 6\n",
+      "The sum of the first 5 natural numbers is: 10\n",
+      "The sum of the first 5 natural numbers is: 15\n"
      ]
     }
    ],
@@ -679,29 +680,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "c081d1db",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n",
-      "7\n",
-      "5\n",
-      "3\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in reversed(range(1, 10, 2)):\n",
-    "    print(i)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2396f287",
    "metadata": {},
@@ -712,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "230cf34a",
    "metadata": {},
    "outputs": [
@@ -720,15 +698,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 2 3 4 5 6 6 7 8 "
+      "42\n"
      ]
     }
    ],
    "source": [
     "a = [[1,2,3],[4,5,6],[6,7,8]]\n",
+    "sum = 0\n",
     "for i in a:\n",
     "    for j in i:\n",
-    "        print(j, end=' ')"
+    "        sum = sum + j \n",
+    "print(sum)  "
    ]
   },
   {
@@ -799,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "88e655a9",
    "metadata": {},
    "outputs": [
@@ -819,6 +799,28 @@
     "\n",
     "for i, j in zip(a,b):\n",
     "    print([i,j])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "64ca3ade",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 a\n",
+      "1 b\n",
+      "2 c\n",
+      "3 d\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, j in enumerate(b):\n",
+    "    print(i,j)"
    ]
   },
   {
@@ -847,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "cee59c5c",
    "metadata": {},
    "outputs": [
@@ -896,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "d8e08108",
    "metadata": {},
    "outputs": [
@@ -909,9 +911,10 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "# Guessing game with a while loop\n",
-    "secret_number = 7\n",
-    "guess = 0\n",
+    "secret_number = np.random.randint(1, 10)\n",
+    "guess = int(input(\"Guess the secret number: \"))\n",
     "while guess != secret_number:\n",
     "    guess = int(input(\"Guess the secret number: \"))\n",
     "print(\"Congratulations! You guessed the secret number.\")"
