--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "b8bbb34f",
    "metadata": {},
    "outputs": [
@@ -589,27 +589,21 @@
      "output_type": "stream",
      "text": [
       "H\n",
-      "e\n",
-      "l\n",
-      "l\n",
-      "o\n",
-      ",\n",
+      "L\n",
+      "O\n",
       " \n",
-      "P\n",
-      "y\n",
-      "t\n",
-      "h\n",
-      "o\n",
-      "n\n",
-      "!\n"
+      "Y\n",
+      "H\n",
+      "N\n"
      ]
     }
    ],
    "source": [
-    "# Iterating over characters in a string\n",
+    "# Finding the even index element in a given string\n",
     "message = \"Hello, Python!\"\n",
-    "for char in message:\n",
-    "    print(char)"
+    "for char in range(len(message)):\n",
+    "    if char % 2 == 0:\n",
+    "        print(message[char].upper())"
    ]
   },
   {
